update: Sistema de batalha finalizado e fase1 no meio

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "cstdlib": "c",
         "algorithm": "c",
         "item.h": "c",
-        "fase1.h": "c"
+        "fase1.h": "c",
+        "unistd.h": "c",
+        "inimigo.h": "c"
     }
 }
