update: Introducao refeita e aplicando clean code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,8 @@
         "tuple": "c",
         "type_traits": "c",
         "utility": "c",
-        "system_error": "c"
+        "system_error": "c",
+        "introducao.h": "c",
+        "stdio.h": "c"
     }
 }
