update: Iniciado a adicao de Estado em inimigos, alterado de Makefiles para CMake e progressao em historia

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "system_error": "c",
         "introducao.h": "c",
         "stdio.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "estado.h": "c"
     }
 }
